# tech-challenge-3

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
services/auth/: Dockerfile  Makefile  README.md  env.example  pyproject.toml  sonar-project.properties
services/auth/src/: __init__.py  environment.py  main.py
services/auth/src/application/: __init__.py
services/auth/src/application/dtos/: __init__.py  auth.py
services/auth/src/application/ports/: __init__.py  identity_provider.py  token_verifier.py
services/auth/src/application/use_cases/: __init__.py  autenticar_cliente.py  obter_perfil_por_sub.py  obter_perfil_proprio.py  registrar_cliente.py
services/auth/src/domain/: __init__.py
services/auth/src/domain/exceptions/: __init__.py  auth.py  cliente.py  token.py
services/auth/src/domain/value_objects/: __init__.py  cpf.py  credenciais.py
services/auth/src/infrastructure/: __init__.py  logging.py
services/auth/src/infrastructure/auth/: __init__.py  jwks.py  jwt_token_verifier.py
services/auth/src/infrastructure/aws/: __init__.py  cognito_client.py
services/auth/src/interface/: __init__.py
services/auth/src/interface/controllers/: __init__.py  dependencies.py  rate_limit.py
services/auth/src/interface/gateways/: __init__.py  cognito_identity_provider_gateway.py
services/auth/src/interface/presenters/: __init__.py  cpf_presenter.py  error_presenter.py
services/auth/tests/: conftest.py
services/auth/tests/application/use_cases/: test_obter_perfil_por_sub.py  test_obter_perfil_proprio.py  test_registrar_cliente.py
services/auth/tests/domain/value_objects/: test_cpf.py
services/auth/tests/environment/: test_settings.py
services/auth/tests/interface/: conftest.py
services/auth/tests/interface/api/: test_auth_router.py  test_clientes_router.py  test_cors.py
services/auth/tests/interface/identity/: test_cognito_identity_provider.py
services/auth/tests/interface/presenters/: test_cpf_presenter.py
services/vendas/: .dockerignore  Dockerfile  Makefile  README.md  alembic.ini  env.example  pyproject.toml  sonar-project.properties
services/vendas/src/: __init__.py  environment.py  main.py  seed_veiculos.py
services/vendas/src/application/: __init__.py
services/vendas/src/application/dtos/: __init__.py  paginacao.py  veiculo.py  venda.py
services/vendas/src/application/ports/: __init__.py  token_verifier.py  veiculo_query_service.py
services/vendas/src/application/use_cases/: __init__.py  acesso_venda.py  cadastrar_veiculo.py  cancelar_compra.py  comprar_veiculo.py  editar_veiculo.py  efetivar_compra.py  expirar_reservas_vencidas.py  iniciar_compra.py  listar_disponiveis.py  listar_vendidos.py  obter_compra.py
services/vendas/src/domain/: __init__.py
services/vendas/src/domain/entities/: __init__.py  veiculo.py  venda.py
services/vendas/src/domain/exceptions/: __init__.py  base.py  token.py  veiculo.py  venda.py
services/vendas/src/domain/repositories/: __init__.py  unit_of_work.py  veiculo_repository.py  venda_repository.py
services/vendas/src/domain/value_objects/: __init__.py  ano.py  identidade.py  preco.py  status_veiculo.py  status_venda.py
services/vendas/src/infrastructure/: __init__.py
services/vendas/src/infrastructure/alembic/: env.py  script.py.mako
services/vendas/src/infrastructure/auth/: __init__.py  jwt_token_verifier.py
services/vendas/src/infrastructure/database/: __init__.py  session.py
services/vendas/src/infrastructure/models/: __init__.py  base.py  veiculo_model.py  venda_model.py
services/vendas/src/infrastructure/tasks/: __init__.py  expiracao_reservas.py
services/vendas/src/interface/: __init__.py
services/vendas/src/interface/controllers/: __init__.py  dependencies.py  health_controller.py
services/vendas/src/interface/gateways/: __init__.py  unit_of_work_gateway.py  veiculo_query_service_gateway.py  veiculo_repository_gateway.py  venda_repository_gateway.py
services/vendas/src/interface/presenters/: __init__.py
services/vendas/tests/: conftest.py  db_fixtures.py
services/vendas/tests/application/: conftest.py
services/vendas/tests/application/use_cases/: test_cadastrar_veiculo.py  test_cancelar_compra.py  test_comprar_veiculo.py  test_editar_veiculo.py  test_efetivar_compra.py  test_expirar_reservas_vencidas.py  test_iniciar_compra.py  test_listagens.py  test_obter_compra.py
services/vendas/tests/domain/entities/: test_veiculo.py  test_venda.py
services/vendas/tests/domain/value_objects/: test_ano.py  test_preco.py  test_status_veiculo.py  test_status_venda.py
services/vendas/tests/e2e/: conftest.py  test_fluxo_compra_use_cases.py  test_listagem_http_smoke.py
services/vendas/tests/environment/: test_settings.py
services/vendas/tests/infrastructure/: test_jwt_token_verifier.py
services/vendas/tests/integration/: conftest.py  test_alembic_migration.py  test_unit_of_work_gateway.py  test_veiculo_query_service_gateway.py  test_veiculo_repository_gateway.py  test_venda_repository_gateway.py
services/vendas/tests/interface/: conftest.py
services/vendas/tests/interface/api/: test_compras_router.py  test_cors.py  test_error_handlers.py  test_veiculos_router.py
services/vendas/tests/interface/gateways/: __init__.py  test_veiculo_repository_mapper.py  test_venda_repository_mapper.py  (+1 more)
(+36 files in other folders)
