[project]
name = "vendas"
version = "0.1.0"
description = "Servico de vendas de veiculos (SOAT Fase 3) - API FastAPI com Clean Architecture"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.137.1",
    "loguru>=0.7.3",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.13.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.49.0",
    "alembic>=1.18.4",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "psycopg>=3.3.4",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
    "testcontainers[postgresql]>=4.14.2",
    "ty>=0.0.49",
]

# ------------------------------------------------------------------------------
# Ruff: formatador + linter (Astral). Tests sao formatados mas com regras mais
# brandas (ver per-file-ignores). Espelha o .pre-commit-config.yaml.
# ------------------------------------------------------------------------------
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (ordenacao de imports)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # regras especificas do Ruff
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ------------------------------------------------------------------------------
# ty: type checker (Astral). A raiz do projeto entra no path para resolver o
# pacote `src` (imports absolutos `from src....`).
# ------------------------------------------------------------------------------
[tool.ty.environment]
python-version = "3.13"
extra-paths = ["."]

# ------------------------------------------------------------------------------
# pytest: raiz do projeto no pythonpath (imports `from src....`); asyncio auto.
# ------------------------------------------------------------------------------
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing -m 'not integration'"
markers = [
    "unit: testes unitarios puros (sem I/O)",
    "integration: testes de integracao (banco efemero via Testcontainers)",
    "e2e: testes fim-a-fim",
]

# ------------------------------------------------------------------------------
# Cobertura de testes.
# ------------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
